feat: DynamoDB 의존성 추가, DynamoDbBean 추가

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly 'com.h2database:h2'
+    implementation group: 'io.awspring.cloud', name: 'spring-cloud-aws-starter', version: '3.2.1'
+    implementation 'io.awspring.cloud:spring-cloud-aws-dependencies:3.2.1'
+    implementation group: 'io.awspring.cloud', name: 'spring-cloud-aws-dynamodb', version: '3.2.1'
 }
 
 tasks.named('test') {
